# IMEIProjectTest

./: docker-compose.yml
ImeiCheckerService/: .env  main.py  pyproject.toml
ImeiCheckerService/docker/: Dockerfile
ImeiCheckerService/models/: enums.py  models.py
db_service/: .env  main.py  pyproject.toml
db_service/database/: database.py
db_service/docker/: Dockerfile
db_service/models/: models.py  models_db.py
gateaway_service/: main.py  pyproject.toml
gateaway_service/docker/: Dockerfile
tgService/: main.py  pyproject.toml
tgService/docker/: Dockerfile
